--- a/pca_from_scratch_mb032219.ipynb
+++ b/pca_from_scratch_mb032219.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "- PCA is eigen decomposition that is a feature reduction unsupervised algorithm that reduces features with no variance \"influence\" to lower dimensions\n",
     "- Eigenvectors direction\n",
-    "- Eigenvalues magnitude\n",
+    "- Eigenvalues magnitude/strength\n",
     "\n",
     "#### Key Formulas:\n",
     "\n",
