--- a/mit_dataScience_optimization_mb041519.ipynb
+++ b/mit_dataScience_optimization_mb041519.ipynb
@@ -1309,6 +1309,265 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Walks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-18T15:18:50.956620Z",
+     "start_time": "2019-04-18T15:18:50.944964Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Location(object):\n",
+    "    def __init__(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        \n",
+    "    def move(self, deltaX, deltaY):\n",
+    "        return Location(self.x + deltaX,\n",
+    "                       self.y + deltaY)\n",
+    "    \n",
+    "    def getX(self):\n",
+    "        return self.x\n",
+    "    \n",
+    "    def getY(self):\n",
+    "        return self.y\n",
+    "    \n",
+    "    def distFrom(self, other):\n",
+    "        xDist = self.x - other.getX()\n",
+    "        yDist = self.y - other.getY()\n",
+    "        return (xDist**2 + yDist**2)**0.5\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return '<' + str(self.x) + ', ' +\\\n",
+    "                str(self.y) + '>'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-18T15:26:11.030857Z",
+     "start_time": "2019-04-18T15:26:11.026326Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Drunk(object):\n",
+    "    def __init__(self, name=None):\n",
+    "        self.name = name\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        if self != None:\n",
+    "            return self.name + '!'\n",
+    "        else:\n",
+    "            return 'Anonymous'\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-18T15:49:21.208106Z",
+     "start_time": "2019-04-18T15:49:21.202761Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "class UsualDrunk(Drunk):\n",
+    "    def takeStep(self):\n",
+    "        stepChoices = [(0,1),(0,-1),(1,0),(-1,0)]\n",
+    "        return random.choice(stepChoices)\n",
+    "    \n",
+    "class MasochistDrunk(Drunk):\n",
+    "    def takeStep(self):\n",
+    "        stepChoices = [(0.0, 1.1), (0.0, -0.9),\n",
+    "                       (1.0, 0.0), (-1.0, 0.0)]\n",
+    "        return random.choice(stepChoices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-18T16:22:51.188599Z",
+     "start_time": "2019-04-18T16:22:51.182002Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Field(object):\n",
+    "    def __init__(self):\n",
+    "        self.drunks = {}\n",
+    "        \n",
+    "    def addDrunk(self, drunk, loc):\n",
+    "        if drunk in self.drunks:\n",
+    "            raise ValueError('Duplicate drunk')\n",
+    "        else:\n",
+    "            self.drunks[drunk] = loc\n",
+    "            \n",
+    "    def moveDrunk(self, drunk):\n",
+    "        if drunk not in self.drunks:\n",
+    "            raise ValueError('Drunk not in field')\n",
+    "        xDist, yDist = drunk.takeStep()\n",
+    "        #use move method of Location to get new location\n",
+    "        self.drunks[drunk] =\\\n",
+    "            self.drunks[drunk].move(xDist, yDist)\n",
+    "        \n",
+    "    def getLoc(self, drunk):\n",
+    "        if drunk not in self.drunks:\n",
+    "            raise ValueError('Drunk not in field')\n",
+    "        return self.drunks[drunk]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-18T15:56:19.690082Z",
+     "start_time": "2019-04-18T15:56:19.686003Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def moveDrunk(self, drunk):\n",
+    "    if drunk not in self.drunks:\n",
+    "        raise ValueError('Drunk not in field')\n",
+    "    xDist, yDist = drunk.takeStep()\n",
+    "    # use move method of location to get new location\n",
+    "    self.drunks[drunk] = self.drunks[drunk].move(xDist, yDist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-18T15:59:46.827877Z",
+     "start_time": "2019-04-18T15:59:46.824078Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def walk(f, d, numSteps):\n",
+    "    \"\"\"\n",
+    "    Assumes: f a Field, d a Drunk in f, & numSteps an int >= 0\n",
+    "    Moves d numSteps times; returns the distance between the final\n",
+    "    locaiton & the location at the start of the walk\n",
+    "    \"\"\"\n",
+    "    start = f.getLoc(d)\n",
+    "    for s in range(numSteps):\n",
+    "        f.moveDrunk(d)\n",
+    "    return start.distFrom(f.getLoc(d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-18T16:24:39.389718Z",
+     "start_time": "2019-04-18T16:24:39.385072Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def simWalks(numSteps, numTrials, dClass):\n",
+    "    \"\"\"Assumes numSteps an int >= 0, numTrials an int > 0,\n",
+    "         dClass a subclass of Drunk\n",
+    "       Simulates numTrials walks of numSteps steps each.\n",
+    "       Returns a list of the final distances for each trial\"\"\"\n",
+    "    Homer = dClass('Homer')\n",
+    "    origin = Location(0, 0)\n",
+    "    distances = []\n",
+    "    for t in range(numTrials):\n",
+    "        f = Field()\n",
+    "        f.addDrunk(Homer, origin)\n",
+    "        distances.append(round(walk(f, Homer,\n",
+    "                                    numSteps), 1))\n",
+    "    return distances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-18T16:24:58.632780Z",
+     "start_time": "2019-04-18T16:24:56.679411Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UsualDrunk random walk of 10 steps\n",
+      " Mean = 2.863\n",
+      " Max = 7.2 Min = 0.0\n",
+      "UsualDrunk random walk of 100 steps\n",
+      " Mean = 8.296\n",
+      " Max = 21.6 Min = 1.4\n",
+      "UsualDrunk random walk of 1000 steps\n",
+      " Mean = 27.297\n",
+      " Max = 66.3 Min = 4.2\n",
+      "UsualDrunk random walk of 10000 steps\n",
+      " Mean = 89.241\n",
+      " Max = 226.5 Min = 10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def drunkTest(walkLengths, numTrials, dClass):\n",
+    "    \"\"\"Assumes walkLengths a sequence of ints >= 0\n",
+    "         numTrials an int > 0, dClass a subclass of Drunk\n",
+    "       For each number of steps in walkLengths, runs simWalks with\n",
+    "         numTrials walks and prints results\"\"\"\n",
+    "    for numSteps in walkLengths:\n",
+    "        distances = simWalks(numSteps, numTrials, dClass)\n",
+    "        print(dClass.__name__, 'random walk of', numSteps, 'steps')\n",
+    "        print(' Mean =', round(sum(distances)/len(distances), 4))\n",
+    "        print(' Max =', max(distances), 'Min =', min(distances))\n",
+    "        \n",
+    "random.seed(0)\n",
+    "drunkTest((10, 100, 1000, 10000), 100, UsualDrunk)\n",
+    "def simAll(drunkKinds, walkLengths, numTrials):\n",
+    "    for dClass in drunkKinds:\n",
+    "        drunkTest(walkLengths, numTrials, dClass)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Monte Carlo Simulation\n",
+    "\n",
+    "**MC** a method of estimating the value of an unknown quantity using the principles of inferential statistics\n",
+    "\n",
+    "#### Inferential Statistics\n",
+    "\n",
+    "A Random Sample tends to exhibit the same properites as the population from which it is drawn\n",
+    "\n",
+    "- Population: a set of samples\n",
+    "- Sample: a proper subset of the population"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
