--- a/rnn_crypto_mb042019.ipynb
+++ b/rnn_crypto_mb042019.ipynb
@@ -26,8 +26,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-20T19:28:31.749319Z",
-     "start_time": "2019-04-20T19:28:30.796958Z"
+     "end_time": "2019-06-06T01:45:42.392168Z",
+     "start_time": "2019-06-06T01:45:41.831509Z"
     }
    },
    "outputs": [],
@@ -54,8 +54,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-20T19:28:31.772192Z",
-     "start_time": "2019-04-20T19:28:31.751566Z"
+     "end_time": "2019-06-06T01:45:43.544338Z",
+     "start_time": "2019-06-06T01:45:43.531568Z"
     }
    },
    "outputs": [],
@@ -116,8 +116,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-20T19:28:31.779584Z",
-     "start_time": "2019-04-20T19:28:31.775669Z"
+     "end_time": "2019-06-06T01:45:45.030308Z",
+     "start_time": "2019-06-06T01:45:45.026939Z"
     }
    },
    "outputs": [],
@@ -135,8 +135,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-20T19:28:32.310856Z",
-     "start_time": "2019-04-20T19:28:31.782458Z"
+     "end_time": "2019-06-06T01:45:51.076328Z",
+     "start_time": "2019-06-06T01:45:50.618197Z"
     }
    },
    "outputs": [
@@ -197,8 +197,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-20T19:28:32.315349Z",
-     "start_time": "2019-04-20T19:28:32.312389Z"
+     "end_time": "2019-06-06T01:46:17.814924Z",
+     "start_time": "2019-06-06T01:46:17.812186Z"
     }
    },
    "outputs": [],
@@ -213,8 +213,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-20T19:28:32.324323Z",
-     "start_time": "2019-04-20T19:28:32.317161Z"
+     "end_time": "2019-06-06T01:46:28.345353Z",
+     "start_time": "2019-06-06T01:46:28.340675Z"
     }
    },
    "outputs": [],
@@ -236,8 +236,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-20T19:28:32.390750Z",
-     "start_time": "2019-04-20T19:28:32.326966Z"
+     "end_time": "2019-06-06T01:46:32.943611Z",
+     "start_time": "2019-06-06T01:46:32.874626Z"
     }
    },
    "outputs": [],
@@ -257,8 +257,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-20T19:28:32.406752Z",
-     "start_time": "2019-04-20T19:28:32.393352Z"
+     "end_time": "2019-06-06T01:46:33.819665Z",
+     "start_time": "2019-06-06T01:46:33.805675Z"
     }
    },
    "outputs": [
@@ -293,8 +293,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-20T19:28:32.459763Z",
-     "start_time": "2019-04-20T19:28:32.410295Z"
+     "end_time": "2019-06-06T01:46:36.764316Z",
+     "start_time": "2019-06-06T01:46:36.721807Z"
     }
    },
    "outputs": [],
@@ -325,8 +325,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-20T19:28:40.333571Z",
-     "start_time": "2019-04-20T19:28:32.462085Z"
+     "end_time": "2019-06-06T01:46:46.108968Z",
+     "start_time": "2019-06-06T01:46:39.466638Z"
     }
    },
    "outputs": [],
@@ -340,8 +340,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-20T19:28:40.396554Z",
-     "start_time": "2019-04-20T19:28:40.335442Z"
+     "end_time": "2019-06-06T01:46:46.163826Z",
+     "start_time": "2019-06-06T01:46:46.110875Z"
     }
    },
    "outputs": [
@@ -359,6 +359,31 @@
     "print(f\"train data: {len(train_x)} validation: {len(validation_x)}\")\n",
     "print(f\"Dont buys: {train_y.count(0)}, buys: {train_y.count(1)}\")\n",
     "print(f\"VALIDATION Dont buys: {validation_y.count(0)}, buys: {validation_y.count(1)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-06T01:51:34.631507Z",
+     "start_time": "2019-06-06T01:51:34.627244Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(train_y)"
    ]
   },
   {
