v061219 var_rnn_lstm_notebook

--- a/var_rnn_playground_mb060519.ipynb
+++ b/var_rnn_playground_mb060519.ipynb
@@ -1815,6 +1815,126 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-12T18:47:21.250417Z",
+     "start_time": "2019-06-12T18:47:21.216821Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "102500.0"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zestimate = 105000\n",
+    "list_price = 100000\n",
+    "market_value_high = np.nan\n",
+    "market_value_low = 'nan'\n",
+    "\n",
+    "values_ls = [zestimate, list_price, market_value_high, market_value_low]\n",
+    "cleaned_values_ls = [x for x in values_ls if str(x) != 'nan']\n",
+    "bid = np.sum(cleaned_values_ls) / len(cleaned_values_ls)\n",
+    "bid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-12T18:50:16.296980Z",
+     "start_time": "2019-06-12T18:50:16.257292Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "130756157844381996411481584321183713929"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import uuid\n",
+    "uuid.uuid4().int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-12T18:58:56.213663Z",
+     "start_time": "2019-06-12T18:58:56.176798Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20190612115856209431\n",
+      "20190612115856209554\n",
+      "20190612115856209586\n",
+      "20190612115856209612\n",
+      "20190612115856209642\n",
+      "20190612115856209666\n",
+      "20190612115856209689\n",
+      "20190612115856209712\n",
+      "20190612115856209735\n",
+      "20190612115856209758\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "for i in range(10):\n",
+    "    print(int(datetime.now().strftime('%Y%m%d%H%M%S%f')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-12T19:33:39.364225Z",
+     "start_time": "2019-06-12T19:33:39.322231Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'br61438'"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "random_idx = random.randint(10000, 100000)\n",
+    "f'br'+str(random_idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
